<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zenoh_security_configuration_tools</name>
  <version>0.3.0</version>
  <description>This package generates zenoh secutiry configurations</description>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernanadez</maintainer>
  <license>Apache License 2.0</license>

  <depend>cli11</depend>
  <depend>tinyxml2_vendor</depend>
  <depend>zenoh_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
